Improve URL parsing. Include more test cases.